Update tutorial and base modals to use dark mode styles. The changes include updating the background color of the modals to an off-black color, ensuring that the text color of the tiles is white in dark mode, and updating other elements like icons and buttons to use the correct colors for dark mode.

--- a/src/app/components/dialogs/dialog-tutorial/dialog-tutorial.component.scss
+++ b/src/app/components/dialogs/dialog-tutorial/dialog-tutorial.component.scss
@@ -14,7 +14,7 @@ $grid-cell-size: 30px;
   padding: $spacing-xs;
 
   &:hover {
-    color: $dark-gray;
+    color: $gray-text;
   }
 }
 
@@ -156,7 +156,7 @@ h1 {
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  color: $white;
+  color: var(--theme-black);
   border-radius: 6px;
   font-size: 15px;
 }
@@ -191,7 +191,7 @@ h1 {
   i {
     margin-left: 4px;
     margin-right: 4px;
-    color: $medium-gray;
+    color: $gray-text;
     font-size: 10px;
     margin-top: auto;
     margin-bottom: auto;
